--- a/estimacio_p_q_i_sampling.ipynb
+++ b/estimacio_p_q_i_sampling.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "eb5266a1",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "4fb424b0",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "fd5d22ef",
    "metadata": {},
    "outputs": [
@@ -174,11 +174,11 @@
       " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
       " 0. 0. 0. 0. 0. 0. 0. 0.]\n",
       "Primeres 5 posicions son: \n",
-      "[[0. 1. 1. 0. 0.]\n",
-      " [0. 0. 1. 1. 1.]\n",
+      "[[0. 1. 1. 1. 1.]\n",
+      " [1. 0. 1. 0. 1.]\n",
       " [0. 1. 0. 1. 1.]\n",
-      " [0. 1. 0. 0. 0.]\n",
-      " [1. 0. 1. 0. 0.]]\n"
+      " [0. 0. 0. 0. 1.]\n",
+      " [1. 1. 0. 1. 0.]]\n"
      ]
     }
    ],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "a844004f",
    "metadata": {},
    "outputs": [
@@ -232,8 +232,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "q_inf (probabilitat d'eliminar un enllaç existent):  0.9573476846459698\n",
-      "p_inf (probabilitat d'afegir un enllaç inexistent):  0.04446730229061993\n"
+      "q_inf (probabilitat d'eliminar un enllaç existent):  0.9570686900958466\n",
+      "p_inf (probabilitat d'afegir un enllaç inexistent):  0.0441995544239338\n"
      ]
     }
    ],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "id": "f3c7ac8b",
    "metadata": {},
    "outputs": [],
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "id": "7672f23b",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
      "output_type": "stream",
      "text": [
       "L_sint generada té la forma:(224, 224)\n",
-      "Nombre d'enllaços en L_sint:  2158.0\n"
+      "Nombre d'enllaços en L_sint:  2109.0\n"
      ]
     }
    ],
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "id": "ef24298a",
    "metadata": {},
    "outputs": [
@@ -352,12 +352,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L_sint generada te la forma (5, 224, 224)\n",
-      "Nombre d'enllaços a la xarxa 0: 2148.0\n",
-      "Nombre d'enllaços a la xarxa 1: 2058.0\n",
-      "Nombre d'enllaços a la xarxa 2: 2088.0\n",
-      "Nombre d'enllaços a la xarxa 3: 2160.0\n",
-      "Nombre d'enllaços a la xarxa 4: 2152.0\n"
+      "A_model generada te la forma (5, 224, 224)\n",
+      "Nombre d'enllaços a la xarxa 0: 2147.0\n",
+      "Nombre d'enllaços a la xarxa 1: 2212.0\n",
+      "Nombre d'enllaços a la xarxa 2: 2206.0\n",
+      "Nombre d'enllaços a la xarxa 3: 2184.0\n",
+      "Nombre d'enllaços a la xarxa 4: 2178.0\n"
      ]
     }
    ],
@@ -365,14 +365,14 @@
     "nre_xarxes = 5 #potser després canviar nre al mateix que en l'altre cas\n",
     "Nx = L_wiring_nova.shape[0]\n",
     "Ny = L_wiring_nova.shape[1]\n",
-    "L_sint=np.zeros((nre_xarxes,Nx,Ny))\n",
+    "A_model=np.zeros((nre_xarxes,Nx,Ny))\n",
     "\n",
     "for k in range(0,nre_xarxes):\n",
-    "    L_sint[k,:,:]=generar_xarxa_sintetica(L_wiring_nova, p_inf, q_inf)\n",
+    "    A_model[k,:,:]=generar_xarxa_sintetica(L_wiring_nova, p_inf, q_inf)\n",
     "    \n",
-    "print(f\"L_sint generada te la forma\", L_sint.shape)\n",
+    "print(f\"A_model generada te la forma\", A_model.shape)\n",
     "for i in range(nre_xarxes):\n",
-    "    print(f\"Nombre d'enllaços a la xarxa {i}: {np.sum(L_sint[i,:,:])}\")\n"
+    "    print(f\"Nombre d'enllaços a la xarxa {i}: {np.sum(A_model[i,:,:])}\")"
    ]
   },
   {
@@ -381,6 +381,242 @@
    "metadata": {},
    "source": [
     "## Càlcul de l’energia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53476b43",
+   "metadata": {},
+   "source": [
+    "En aquesta secció calculem l’energia del model per un wiring fix L_wiring_nova.\n",
+    "Generem un ensemble de xarxes sintètiques a partir dels paràmetres inferits p_inf i q_inf, i comparem la distribució d’energies amb l’energia de la xarxa observada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "f6dfa57a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#paràmetres del hamiltonià que es fan servir al paper\n",
+    "alpha = 1.0\n",
+    "beta = 5.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9851a264",
+   "metadata": {},
+   "source": [
+    "### Funcions d'energia del repo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "51ba3734",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@jit(nopython = True)\n",
+    "def hamiltonian_prob(Edges_NoL, Edges_L, overlap_0, overlap_1, alpha, beta):\n",
+    "\n",
+    "    A_1 = overlap_1 + alpha\n",
+    "    B_1 = (Edges_L - overlap_1 + beta)\n",
+    "    C_1 = Edges_L + alpha + beta\n",
+    "    \n",
+    "    A_0 = overlap_0 + alpha\n",
+    "    B_0 = (Edges_NoL - overlap_0 + beta)\n",
+    "    C_0 = Edges_NoL + alpha + beta\n",
+    "    \n",
+    "    H1 = math.lgamma(A_1) + math.lgamma(B_1) - math.lgamma(C_1) \n",
+    "    H0 = math.lgamma(A_0) + math.lgamma(B_0) - math.lgamma(C_0) \n",
+    "    \n",
+    "    H = -(H1 + H0)\n",
+    "    return H\n",
+    "\n",
+    "\n",
+    "@jit(nopython=True)\n",
+    "def overlap_total_prob(L_f, A_f, P_inv_f):\n",
+    "    Nx = L_f.shape[0]\n",
+    "    Ny = L_f.shape[1]\n",
+    "    K = A_f.shape[0]\n",
+    "    \n",
+    "    ovlp_0 = np.zeros((K))\n",
+    "    ovlp_1 = np.zeros((K))\n",
+    "    \n",
+    "    for k in range(0,K):\n",
+    "        for i in range(0,Nx):\n",
+    "            for j in range(0,Ny):\n",
+    "                p_i = int(P_inv_f[k,i])\n",
+    "                p_j = int(P_inv_f[k,j])\n",
+    "                \n",
+    "                valor_L = L_f[i,j]\n",
+    "                valor_A = A_f[k,p_i,p_j]\n",
+    "                \n",
+    "                ovlp_0[k] += (1-valor_L)*(1-valor_A)\n",
+    "                ovlp_1[k] += valor_L*valor_A\n",
+    "                \n",
+    "    return int(np.sum(ovlp_0)), int(np.sum(ovlp_1))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22b0b7da",
+   "metadata": {},
+   "source": [
+    "Fem servir la identitat per fixar que no hi ha permutacions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "7c54262d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#definim la permutació identitat per a cada una de les xarxes generades, és a dir, no permutem els nodes en aquesta etapa, només volem avaluar el hamiltonià amb la permutació identitat per a cada una de les mostres generades\n",
+    "nre_xarxes = 50  # o 100, luego subes\n",
+    "P_inv_id = np.tile(np.arange(Nx), (nre_xarxes, 1))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c2dc09b",
+   "metadata": {},
+   "source": [
+    "Calculem overlaps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "376b98a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overlap 0 (model): 120121\n",
+      "Overlap 1 (model): 5368\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ara calculem els overlaps per les xarxes generades amb la permutació identitat\n",
+    "ovlp0_sint, ovlp1_sint = overlap_total_prob(L_wiring_nova, A_model, P_inv_id)\n",
+    "\n",
+    "print(\"Overlap 0 (model):\", ovlp0_sint)\n",
+    "print(\"Overlap 1 (model):\", ovlp1_sint)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b161666e",
+   "metadata": {},
+   "source": [
+    "### Energía de l'ensemble sintetic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "0069fae8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Edges_L: 1252000\n",
+      "Edges_NoL: 1256800\n",
+      "Energia del model: 430851.0904469155\n"
+     ]
+    }
+   ],
+   "source": [
+    "#comptadors\n",
+    "Edges_L = nre_xarxes * int(np.sum(L_wiring_nova))\n",
+    "Edges_NoL = nre_xarxes * Nx * Ny - Edges_L\n",
+    "\n",
+    "print(\"Edges_L:\", Edges_L)\n",
+    "print(\"Edges_NoL:\", Edges_NoL)\n",
+    "\n",
+    "#energia de l'ensemble sintetic\n",
+    "\n",
+    "H_model = hamiltonian_prob(Edges_NoL, Edges_L, ovlp0_sint, ovlp1_sint, alpha, beta)\n",
+    "\n",
+    "print(\"Energia del model:\", H_model)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77e3c6cb",
+   "metadata": {},
+   "source": [
+    "### Energía de l'observació"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "2e563964",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Energia observada: 9011.297342034348\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ara calculem els overlaps i l'energia per la xarxa observada, amb la permutació identitat, és a dir, sense permutar els nodes, només volem avaluar el hamiltonià per la xarxa observada amb la permutació identitat\n",
+    "A_obs = xarxa_obs.reshape(1, Nx, Ny)\n",
+    "P_inv_obs = np.arange(Nx).reshape(1, Nx)\n",
+    "\n",
+    "ovlp0_obs, ovlp1_obs = overlap_total_prob(L_wiring_nova, A_obs, P_inv_obs)\n",
+    "\n",
+    "Edges_L_obs = int(np.sum(L_wiring_nova))\n",
+    "Edges_NoL_obs = Nx * Ny - Edges_L_obs\n",
+    "\n",
+    "H_obs = hamiltonian_prob(Edges_NoL_obs, Edges_L_obs, ovlp0_obs, ovlp1_obs, alpha, beta)\n",
+    "\n",
+    "print(\"Energia observada:\", H_obs)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "addd98bb",
+   "metadata": {},
+   "source": [
+    "### Distribució d'energies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31a7cfc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_trials = 10\n",
+    "H_dist = []\n",
+    "\n",
+    "for t in range(n_trials):\n",
+    "    A_sint = np.zeros((nre_xarxes, Nx, Ny))\n",
+    "    for k in range(nre_xarxes):\n",
+    "        A_sint[k,:,:] = generar_xarxa_sintetica(L_wiring_nova, p_inf, q_inf)\n",
+    "        \n",
+    "    ovlp0, ovlp1 = overlap_total_prob(L_wiring_nova, A_sint, P_inv_id)\n",
+    "    \n",
+    "    H = hamiltonian_prob(Edges_NoL, Edges_L, ovlp0, ovlp1, alpha, beta)\n",
+    "    \n",
+    "    H_dist.append(H)\n",
+    "    \n"
    ]
   },
   {
