afegim funcions d'energia

--- a/validacio_estructural.ipynb
+++ b/validacio_estructural.ipynb
@@ -278,6 +278,89 @@
    "source": [
     "## Càlcul de l’energia"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09d580b3",
+   "metadata": {},
+   "source": [
+    "### Funcions d'energia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b602afda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@jit(nopython = True)\n",
+    "def hamiltonian_prob(Edges_NoL, Edges_L, overlap_0, overlap_1, alpha, beta):\n",
+    "\n",
+    "    A_1 = overlap_1 + alpha #o11 al paper\n",
+    "    B_1 = (Edges_L - overlap_1 + beta) #o10 al paper\n",
+    "    C_1 = Edges_L + alpha + beta #o1 al paper\n",
+    "    \n",
+    "    A_0 = overlap_0 + alpha #o00 al paper\n",
+    "    B_0 = (Edges_NoL - overlap_0 + beta) # o01 al paper\n",
+    "    C_0 = Edges_NoL + alpha + beta # o0 al paper\n",
+    "    \n",
+    "    #  [ math.lgamma(n+1) == log(n!) ]\n",
+    "    H1 = math.lgamma(A_1)+ math.lgamma(B_1) - math.lgamma(C_1) \n",
+    "    H0 = math.lgamma(A_0)+ math.lgamma(B_0) - math.lgamma(C_0) \n",
+    "    \n",
+    "    H = -(H1 + H0)\n",
+    "    return H\n",
+    "    \n",
+    "    \n",
+    "@jit(nopython=True)\n",
+    "def overlap_total_prob(L_f, A_f, P_inv_f):\n",
+    "    Nx = L_f.shape[0]\n",
+    "    Ny = L_f.shape[1]\n",
+    "    K = A_f.shape[0]\n",
+    "    \n",
+    "    ovlp_0 = np.zeros((K))\n",
+    "    ovlp_1 = np.zeros((K))\n",
+    "    for k in range(0,K):\n",
+    "        for f in range(0,Ny): \n",
+    "            for c in range(0,Nx):\n",
+    "                p_f=int(P_inv_f[k,f]) #es tradueix l'index del bliueprint al real de \n",
+    "                 #(per exemple, si el node 1 de L es el node 5 de A, p_f=5)\n",
+    "                p_c=int(P_inv_f[k,c])  \n",
+    "                valor_L, valor_A = L_f[f,c], A_f[k,p_f,p_c] #compara el valor de L i A a la posició corresponent\n",
+    "                \n",
+    "                ovlp_0[k] = ovlp_0[k] + (1-valor_L)*(1-valor_A )#mira si els zeros coincideixen a L i a A\n",
+    "                ovlp_1[k] = ovlp_1[k] + valor_L*valor_A #mira si els 1s coincideixen a 0 i a  A\n",
+    "                \n",
+    "                \n",
+    "    ovlp_1 = int(sum(ovlp_1))\n",
+    "    ovlp_0 = int(sum(ovlp_0)) #se sumen coincidencies en totes les observacions, resultat global\n",
+    "    return ovlp_0, ovlp_1\n",
+    "#retorna ovlp_0 (nre total de no-enllaços ben predits) i ovlp_1 (nre total d'enllacos ben predits)\n",
+    "\n",
+    "@jit(nopython=True) # The blueprint is the average of the observations (taking into account the mapping)  \n",
+    "def L_wiring(A_f, P_inv_f): #enlaces que aparecen en la mayoría de observaciones\n",
+    "    #A_f:  te la forma KxNxNy, on K és el nre de xarxes observades\n",
+    "    Nx = A_f.shape[1]\n",
+    "    Ny = A_f.shape[2]\n",
+    "    K = A_f.shape[0] \n",
+    "    L_new_f = np.zeros((Nx,Ny))\n",
+    "    \n",
+    "    for i in range(0,Nx):\n",
+    "        for j in range(0,Ny):\n",
+    "            for k in range(0,K):\n",
+    "                #per cada posicio (ij) mira en les K xarxes la posicio que li correspon al blueprint (equivalent segons el mapping)\n",
+    "                p1 = int(P_inv_f[k,i]) # Mapping of the observations\n",
+    "                p2 = int(P_inv_f[k,j]) # Mapping of the observations\n",
+    "                L_new_f[i,j] += A_f[k,p1,p2] #sumo les connexions existents a la posició equivalent en les K xarxes observades\n",
+    "            valor_lnew=1/K* L_new_f[i,j] #fa la mitjana de connexions existents en les K xarxes observades\n",
+    "            L_new_f[i,j] = round( valor_lnew ) #redondeja al valor més proper\n",
+    "            # If valor_lnew = 0, L=0 (we could establish L=1, but it is more probable to not have a connection)\n",
+    "            #L_ij=1--> a la majoria de les k observacions alineades hi ha enllaç aquí\n",
+    "            # L_ij=0--> a la majoria de les k observacions alineades no hi ha enllaç aquí \n",
+    "    return L_new_f\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
