--- a/validacio_estructural.ipynb
+++ b/validacio_estructural.ipynb
@@ -290,6 +290,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1e49acad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#paràmetres del hamiltonià que es fan servir al paper\n",
+    "alpha = 1.0\n",
+    "beta = 5.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b602afda",
    "metadata": {},
    "outputs": [],
@@ -360,6 +372,19 @@
     "            # L_ij=0--> a la majoria de les k observacions alineades no hi ha enllaç aquí \n",
     "    return L_new_f\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c6044a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#definim la permutació identitat per a cada una de les xarxes generades\n",
+    "#volem avaluar el hamiltonià amb la permutació identitat per a cada una de les mostres generades\n",
+    "P_inv_id = np.tile(np.arange(Nx), (nre_xarxes, 1))\n",
+    "#tile empila nre_xarxes vegades la matriu [0,1,2,...,Nx-1] perque cada xarxa tingui la seva pròpia matriu identitat"
    ]
   }
  ],
