--- a/estimacio_p_q_i_sampling.ipynb
+++ b/estimacio_p_q_i_sampling.ipynb
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "fd5d22ef",
    "metadata": {},
    "outputs": [
@@ -201,10 +201,10 @@
     "L_wiring_nova = L_wiring_random(Nx, Ny)\n",
     "print(f\"L_wiring generada aleatòriament té la forma:{L_wiring_nova.shape}\")\n",
     "#vull imprimir la diagonal per comprovar que és 0\n",
-    "print(\"Diagonal de L_wiring_nova:\") \n",
-    "print(np.diag(L_wiring_nova))\n",
-    "print(\"Primeres 5 posicions son: \")\n",
-    "print(L_wiring_nova[:5,:5])"
+    "#print(\"Diagonal de L_wiring_nova:\") \n",
+    "#print(np.diag(L_wiring_nova))\n",
+    "#print(\"Primeres 5 posicions son: \")\n",
+    "#print(L_wiring_nova[:5,:5])"
    ]
   },
   {
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "0069fae8",
    "metadata": {},
    "outputs": [
@@ -536,7 +536,8 @@
     }
    ],
    "source": [
-    "#comptadors \n",
+    "#aixo no serveix, no neccessari per historigrama\n",
+    "# comptadors \n",
     "Edges_L = nre_xarxes * int(np.sum(L_wiring_nova)) #nombre total d'enllaços en les xarxes generades (totes tenen el mateix nombre d'enllaços que L_wiring_nova, per això es multiplica per nre_xarxes)\n",
     "Edges_NoL = nre_xarxes * Nx * Ny - Edges_L  #nombre total de no-enllaços en les xarxes generades (total de posicions - nombre d'enllaços)\n",
     "print(\"Edges_L:\", Edges_L) \n",
