Hem definnit el nou wiring

--- a/estimacio_p_i_q.ipynb
+++ b/estimacio_p_i_q.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "cb35e6a0",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4296c33b",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "750ece35",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "8a242c60",
    "metadata": {},
    "outputs": [],
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "93a4264c",
    "metadata": {},
    "outputs": [],
@@ -252,6 +252,59 @@
     "            # L_ij=0--> a la majoria de les k observacions alineades no hi ha enllaç aquí \n",
     "    return L_new_f"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1caf8a1a",
+   "metadata": {},
+   "source": [
+    "## Definim L_wiring_nova"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c5ae251",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#volem fer un wiring que, en cas d'empat, assigni amb probabilitat un 1 o un 0 en comptes de redondejar al valor més proper. \n",
+    "#poso r=0.5 per assignar amb igual probabilitat un 1 o un 0, però es pot modificar per assignar amb més probabilitat un 1 o un 0.\n",
+    "def L_wiring_nova(A_f, P_inv_f, r=0.5): \n",
+    "    #A_f:  te la forma KxNxNy, on K és el nre de xarxes observades\n",
+    "    Nx = A_f.shape[1]\n",
+    "    Ny = A_f.shape[2]\n",
+    "    K = A_f.shape[0] \n",
+    "    L_new_f = np.zeros((Nx,Ny))\n",
+    "    \n",
+    "   \n",
+    "    for i in range(0,Nx):\n",
+    "        for j in range(0,Ny):\n",
+    "            suma = 0\n",
+    "            for k in range(0,K):\n",
+    "                #per cada posicio (ij) mira en les K xarxes la posicio que li correspon al blueprint (equivalent segons el mapping)\n",
+    "                p1 = int(P_inv_f[k,i]) # Mapping of the observations\n",
+    "                p2 = int(P_inv_f[k,j]) # Mapping of the observations\n",
+    "                suma += A_f[k,p1,p2] #sumo les connexions existents a la posició equivalent en les K xarxes observades\n",
+    "            valor_lnew = suma/K #fa la mitjana de connexions existents en les K xarxes observades\n",
+    "            \n",
+    "            if suma == K/2: #si les dues sumen 1 (tenim una amb 0 i una amb 1)\n",
+    "                if np.random.rand() < r:\n",
+    "                    L_new_f[i,j] = 1\n",
+    "                else:\n",
+    "                    L_new_f[i,j] = 0\n",
+    "            else:\n",
+    "                L_new_f[i,j] = round(valor_lnew) #si no hi ha empat, valor_lnew=0 o valor_lnew=1\n",
+    "    return L_new_f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96b4fb92",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
