--- a/estimacio_p_i_q.ipynb
+++ b/estimacio_p_i_q.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "9ee85672",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "cb35e6a0",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "4296c33b",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "750ece35",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "8a242c60",
    "metadata": {},
    "outputs": [],
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "93a4264c",
    "metadata": {},
    "outputs": [],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6c5ae251",
    "metadata": {},
    "outputs": [],
@@ -300,11 +300,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "96b4fb92",
+   "execution_count": 10,
+   "id": "eeff2a92",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 224, 224)\n"
+     ]
+    }
+   ],
+   "source": [
+    "A_test = CreateCopies(L, q_paper, p_paper, num_networks=2)\n",
+    "\n",
+    "Nx = A_test.shape[1]\n",
+    "\n",
+    "Ao_enters = A_test.astype(int)\n",
+    "P_inv_id = np.tile(np.arange(Nx), (A_test.shape[0], 1))\n",
+    "\n",
+    "L_star = L_wiring_nova(Ao_enters, P_inv_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ef445cbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p_inf: 0.005878306547432931\n",
+      "q_inf: 0.1398093508851566\n"
+     ]
+    }
+   ],
+   "source": [
+    "zeros_wiring = 0\n",
+    "uns_wiring = 0\n",
+    "\n",
+    "nre_p = 0\n",
+    "nre_q = 0\n",
+    "\n",
+    "Nx = L_star.shape[0]\n",
+    "\n",
+    "for i in range(Nx):\n",
+    "    for j in range(Nx):\n",
+    "\n",
+    "        if L_star[i, j] == 0:\n",
+    "            zeros_wiring += 1\n",
+    "\n",
+    "            if A_test[0, i, j] == 1:\n",
+    "                nre_p += 1\n",
+    "            if A_test[1, i, j] == 1:\n",
+    "                nre_p += 1\n",
+    "\n",
+    "        else:\n",
+    "            uns_wiring += 1\n",
+    "\n",
+    "            if A_test[0, i, j] == 0:\n",
+    "                nre_q += 1\n",
+    "            if A_test[1, i, j] == 0:\n",
+    "                nre_q += 1\n",
+    "\n",
+    "p_inf = nre_p / (2 * zeros_wiring)\n",
+    "q_inf = nre_q / (2 * uns_wiring)\n",
+    "\n",
+    "print(\"p_inf:\", p_inf)\n",
+    "print(\"q_inf:\", q_inf)"
+   ]
   }
  ],
  "metadata": {
